Tests now passing for populated file system.   Added test for invalid path